--- a/index.html
+++ b/index.html
@@ -1,1 +1,28 @@
 <!-- Denna fil skall alltid heta index.html och är den första filen på en hemsida -->
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>startsida</title>
+    <link rel="stylesheet" href="css/style.css">
+</head>
+<body>
+    
+
+    <div id="wrapper">
+        <header>
+            <p>header</p>
+    </header>
+        <main>
+            <section id="sec1">hej</section>
+            <section id="sec2">haj</section>
+            <section id="sec3">hoj</section>
+        </main>
+
+        <section id="sec4">lol</section>
+        <section id="sec5">lal</section>
+    </div>
+</body>
+</html>
