--- a/index.html
+++ b/index.html
@@ -13,16 +13,37 @@
 
     <div id="wrapper">
         <header>
-            <p>header</p>
+            <p id="hd" class="hover">Nyheter</p>
+            <p id="hd" class="hover">Web-shop</p>
+            <p id="hd" class="hover">FAQ</p>
+            <p id="hd" class="hover">Hitta hit</p>
     </header>
         <main>
-            <section id="sec1">hej</section>
-            <section id="sec2">haj</section>
-            <section id="sec3">hoj</section>
+            <section id="sec1">
+                <a href="meny.html">
+                    <p class="hover">MENY</p>
+                </a>
+            </section>
+            <section id="sec2">
+                <a href="butik.html">
+                    <p class="hover"> ÖPPETTIDER</p>
+                </a>
+            </section>
+            <section id="sec3">
+                <a href="te.html">
+                    <p class="hover">WEB-SHOP</p>
+                </a>
+            </section>
         </main>
 
-        <section id="sec4">lol</section>
-        <section id="sec5">lal</section>
+        <section id="sec6"></section>
+
+        <section id="sec4">
+            <p>följ oss på instagram!</p>
+        </section>
+        <section id="sec5">
+            <p>kontakta oss!</p>
+        </section>
     </div>
 </body>
 </html>
