--- a/butik.html
+++ b/butik.html
@@ -5,9 +5,23 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>öppettider</title>
+    <link rel="stylesheet" href="css3/style.css">
 </head>
 <body>
-    lol
-    <a href="http://127.0.0.1:5500/index.html">HEM</a>
+    <header>
+        <p id="hd" class="hover" onclick="location.replace('index.html')">Hem</p>
+        <p id="hd" class="hover">Web-shop</p>
+        <p id="hd" class="hover">FAQ</p>
+        <p id="hd" class="hover">Hitta hit</p>
+        <!-- <a href="index.html">HEM</a> -->
+</header>
+
+<section id="sec1">
+    <p>Välkommen!</p>
+</section>
+
+<section id="sec2">här finns vi</section>
+<section id="sec3">bild</section>
+
 </body>
 </html>
