--- a/butik.html
+++ b/butik.html
@@ -17,11 +17,24 @@
 </header>
 
 <section id="sec1">
-    <p>Välkommen!</p>
+    <p>Öppettider!</p>
 </section>
 
-<section id="sec2">här finns vi</section>
-<section id="sec3">bild</section>
+<div id="wrapper">
+    <section id="sec2"></section>
+    <section id="sec3">
+        <ul>
+            <li>Måndag - Torsdag: 9:00 - 18:00
+            </li>
+            <li>Fredag: 10:00 - 20:00</li>
+            <li>Lördag: 11:00 - 20:00</li>
+            <li>Söndag: Stängt</li>
+            </ul>
+    </section>
+    <section id="sec6"></section>
+</div>
+
+
 
 </body>
 </html>
