--- a/index.html
+++ b/index.html
@@ -44,6 +44,12 @@
         <section id="sec5">
             <p>kontakta oss!</p>
         </section>
+
+        <footer>
+            <ul>
+                Frågor? Kontakta kundservice : +46134567890
+            </ul>
+        </footer>
     </div>
 </body>
 </html>
