4 sidor, börjat optimera 2

--- a/index.html
+++ b/index.html
@@ -34,6 +34,9 @@
                     <p class="hover">WEB-SHOP</p>
                 </a>
             </section>
+            
+            <script src="js/script.js"></script> 
+
         </main>
 
         <section id="sec6"></section>
@@ -45,11 +48,11 @@
             <p>kontakta oss!</p>
         </section>
 
-        <footer>
+        <!-- <footer>
             <ul>
                 Frågor? Kontakta kundservice : +46134567890
             </ul>
-        </footer>
+        </footer> -->
     </div>
 </body>
 </html>
