--- a/meny.html
+++ b/meny.html
@@ -23,12 +23,12 @@
     <section id="sec0">
         <ul>MENY</ul>
     </section>
-    <section id="sec1">s1</section>
-    <section id="sec2">s2</section>
-    <section id="sec3">s3</section>
-    <section id="sec4">s4</section>
-    <section id="sec5">s5</section>
-    <section id="sec6">s6</section>
+    <section id="sec1"></section>
+    <section id="sec2"></section>
+    <section id="sec3"></section>
+    <section id="sec4"></section>
+    <section id="sec5"></section>
+    <section id="sec6"></section>
     
 
     </div>
