--- a/te.html
+++ b/te.html
@@ -17,6 +17,18 @@
             <p id="hd" class="hover">Web-shop</p>
             <p id="hd" class="hover">FAQ</p>
             <p id="hd" class="hover">Hitta hit</p>
+            <div id="hamburger" onClick="toggleMenu()">
+                <div id="line1"></div>
+                <div id="line2"></div>
+                <div id="line3"></div>
+            </div>
+            <nav class="active">
+                <ul>
+                    <li><a href="#startsida">STARTSIDA</a></li>
+                    <li><a href="#om">OM FÖRETAGET</a></li>
+                    <li><a href="#contact">KONTAKTA OSS</a></li>
+                </ul>
+            </nav>
     </header>
 
     
